--- a/src/containers/MainContent/MainContent.module.css
+++ b/src/containers/MainContent/MainContent.module.css
@@ -5,17 +5,17 @@
   display: grid;
   grid-template-columns: 0.1fr repeat(3, 1fr) 0.1fr;
   grid-template-rows: 0.1fr repeat(3, 1fr) 0.1fr;
-  margin-top: 24px;
+  padding-top: 24px;
   width: 100%;
 
   & .main-content__sidebar {
     grid-area: 1 / 1 / 6 / 2;
-    padding-bottom: $spacing-s;
   }
 
   & .main-content__header {
     grid-area: 1 / 2 / 2 / 5;
-    padding-bottom: $spacing-l;
+    padding-bottom: $spacing-2xxl;
+    padding-top: $spacing-xs;
   }
 
   & .main-content__outlet {
@@ -24,6 +24,7 @@
 
   & .main-content__outlet-full-col {
     grid-area: 2 / 2 / 5 / 6;
+    padding-right: $spacing-l;
   }
 
   & .main-content__aside {
