--- a/src/pages/FoodMenu/FoodMenu.module.css
+++ b/src/pages/FoodMenu/FoodMenu.module.css
@@ -2,12 +2,12 @@
 
 .food-menu__wrapper {
   @include flexbox($direction: column, $gap: $gap-2Xlarge);
-}
 
-.menu-wrapper {
-  @include flexbox($alignItems: center, $justifyContent: center, $wrap: wrap, $gap: $gap-2Xlarge);
-}
+  & .menu-wrapper {
+    @include flexbox($alignItems: center, $justifyContent: center, $wrap: wrap, $gap: 32px);
+  }
 
-.tab-wrapper {
-  box-shadow: inset 0 -4px 0 -2px $color-grey-300;
+  & .tab-wrapper {
+    box-shadow: inset 0 -4px 0 -2px $color-grey-300;
+  }
 }
